# practical-system-programming-for-rust-developer

./: README.md
Chapter01/: Cargo.toml
Chapter01/deps-example/: Cargo.toml
Chapter01/deps-example/src/: main.rs
Chapter01/first-lib/src/: lib.rs  main.rs
Chapter01/first-program/: Cargo.toml
Chapter01/first-program/src/: main.rs  second.rs
Chapter01/integ-test-example/: Cargo.toml
Chapter01/integ-test-example/src/: lib.rs
Chapter01/integ-test-example/tests/: integration.rs
Chapter01/test-example/src/: main.rs
Chapter02/: Cargo.toml
Chapter02/src/: main.rs
Chapter03/src/: lib.rs
Chapter04/: Cargo.toml
Chapter04/src/imagix/: resize.rs
Chapter05/: Cargo.toml
Chapter06/: Cargo.toml
Chapter06/src/: errors.rs  lib.rs  main.rs  rstats.rs
Chapter08/: Cargo.toml
Chapter08/examples/: snippet01.rs  snippet04.rs  snippet08.rs  snippet11.rs  snippet12.rs  snippet13.rs  snippet14.rs
Chapter10/: Cargo.toml
Chapter10/examples/: snippet01.rs  snippet02.rs  snippet03.rs  snippet04.rs  snippet05.rs  snippet06.rs  snippet09.rs  snippet10.rs  snippet11.rs
Chapter10/src/: main.rs
Chapter11/: Cargo.toml
Chapter11/examples/: snippet1.rs  snippet2.rs  snippet3.rs
Chapter12/examples/: snippet3.rs  snippet4.rs  snippet5.rs  snippet6.rs
Chatper02/src/parsemath/: ast.rs  parser.rs  token.rs  tokenizer.rs
Chatper04/src/: lib.rs  main.rs
Chatper04/src/imagix/: stats.rs
Chatper07/: Cargo.toml
Chatper07/examples/: text_viewer1.rs
Chatper08/examples/: snippet03.rs  snippet05.rs  snippet07.rs  snippet09.rs  snippet10.rs  snippet15.rs
