[package]
name = "net"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "tcp-server"
path = "bin/tcp-server.rs"

[[bin]]
name = "tcp-client"
path = "bin/tcp-client.rs"

[[bin]]
name = "udp-server"
path = "bin/udp-server.rs"

[[bin]]
name = "udp-client"
path = "bin/udp-client.rs"

[[bin]]
name = "proxy-origin"
path = "bin/proxy-origin.rs"

[[bin]]
name = "proxy"
path = "bin/proxy.rs"

[dependencies]
